<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.easytodoapp.TodoFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/todo_title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_title_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todo_title_hint"/>

    <TextView
        android:id="@+id/todo_details_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_details_label"
        style="?android:listSeparatorTextViewStyle"/>

    <Button
        android:id="@+id/todo_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/todo_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <CheckBox
        android:id="@+id/todo_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_solved_label"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/todo_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_contact_text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/todo_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_report_text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:text="@string/todo_swipe_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:listSeparatorTextViewStyle"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

</LinearLayout>
